--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,5 +5,10 @@
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "prettier"
-  ]
+  ],
+  "parser": "@typescript-eslint/parser",
+  "rules": {
+    "no-unused-vars": "off"
+    // "@typescript-eslint/no-unused-vars": ["error"]
+  }
 }
