--- a/package.json
+++ b/package.json
@@ -9,24 +9,42 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/eslint-plugin-next": "^13.4.2",
-    "@radix-ui/react-popover": "^1.0.5",
-    "@types/node": "20.1.4",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
+    "@next/eslint-plugin-next": "^13.4.7",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-popover": "^1.0.6",
+    "@types/node": "20.3.2",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
     "classnames": "^2.3.2",
-    "eslint-config-next": "13.4.2",
-    "next": "13.4.2",
+    "eslint-config-next": "13.4.7",
+    "framer-motion": "^10.12.17",
+    "hast-util-to-text": "^3.1.2",
+    "hastscript": "^7.2.0",
+    "next": "13.4.7",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "react-horizontal-scrolling-menu": "^4.1.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-query": "^3.39.3",
+    "react-use-clipboard": "^1.0.9",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-code-titles": "^1.2.0",
+    "rehype-pretty-code": "^0.10.0",
+    "rehype-slug": "^5.1.0",
+    "remark-gemoji": "^7.0.1",
+    "remark-gfm": "^3.0.1",
+    "typescript": "5.1.6",
+    "unist-util-visit": "^4.1.2"
   },
   "devDependencies": {
-    "eslint": "^8.40.0",
+    "@typescript-eslint/parser": "^5.60.1",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "sass": "^1.62.1"
+    "sass": "^1.63.6"
   }
 }
